# assetc

./: Cargo.toml
layergen/: Cargo.toml
layergen/src/: main.rs
modelc/: Cargo.toml  format.md
modelc/src/: ident.rs  main.rs  types.rs
modelc/src/model/: mod.rs  quadifier.rs
modelc/src/vanilla/: mod.rs  model.rs
modelc/src/vanilla/blockstate/: mod.rs  multipart.rs  variants.rs
modelc/src/writer/: mod.rs
