[package]
name = "modelc"
description = "Compiler for Minecraft models/block states"
version = "0.1.0"
authors = ["2xsaiko <git@dblsaiko.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
byteorder = "1.3.4"